# hands-on-llm

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  Untitled1.ipynb  black_wrapper.sh  curl_test_ollama_payload.sh  hands-on-llm.code-workspace  hello.py  makefile.md  myFirstJupiterNB.ipynb  payload.json  phase_0_setup_log.md  pyproject.toml  readme.md  ready.txt  requirements.txt  setup.cfg  stage_0_setup_log.md  test vscode jupyter.ipynb  test.cu  test.py  test_WSL_Cuda_devicecount
.github/workflows/: python-lint-test.yml
phase0/: Makefile  phase0_readme.md  phase_0_setup_log.md  pyproject.toml  readme.md  requirements.txt  setup.cfg
phase0/batch_and_shell/: homedir_date.sh
phase0/notebooks/: test_jupyter_WSL_GPU.ipynb  test_vscode_jupyter.ipynb
phase0/python_scripts/: rich_panel.py  show_WSL_python_path.py  show_cwd_.py  torch_cuda_info.py
phase0/src/: torch_gpu_info.py
phase0/tests/: test_torch_gpu.py
phase1/: Gemini_CLI_setup.md  Git_cherrypick_howto.md  Makefile  README.md  requirements.txt  requirements_pip_freeze.txt  torch_optimized_for_RTX3070.md  torch_optimized_on_RTX3070.md
phase1/AI-Python-for-Beginners_local_LLM/: README.md  rename_original_helpers.sh
phase1/Colab Notebooks/: L-Karpathy - gpt-dev.ipynb  L-llm_python_tutorial.ipynb  L-mistral7b_colab_noserver.ipynb  L1-mistral7b_colab_noserver.ipynb  L2-run-ollama-on-colab-NGROK.ipynb  L2.5 world_domination-NGROK.ipynb  L3-llm_python_tutorial.ipynb  L4-Karpathy - gpt-dev.ipynb  (+3 more)
phase2/: docker-compose.yml  requirements.txt
tests/: test_torch_gpu.py
(+103 files in other folders)
