[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phase0-check"
version = "0.1.0"
description = "WSL2 CUDA + Python GPU exploration"
authors = [{ name="Kristjan Sillmann"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch==2.5.1+cu121",
    "ipykernel",
    "numpy",
    "rich"
]
