[metadata]
name = phase0-check
version = 0.1.0
description = WSL2 GPU setup and CUDA + PyTorch exploration
author = Kristjan Sillmann
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
keywords = WSL, CUDA, PyTorch, GPU, Jupyter
classifiers =
    Programming Language :: Python :: 3
    Operating System :: POSIX :: Linux
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools

[options]
packages = find:
python_requires = >=3.11
install_requires =
    -r requirements.txt
include_package_data = true

[options.packages.find]
exclude =
    tests
    notebooks
    stage0/cuda
    stage0/bin

[options.entry_points]
console_scripts =
    phase0-gpu-check = stage0.scripts.test_torch_gpu:main

[options.extras_require]
dev =
    black
    isort
    pytest

[tool:pytest]
addopts = -ra -q

